# Invoice_extractor

./: .env.example  extract_invoices_deepseek.py  extract_invoices_mistral.py  extract_invoices_openai.py  pyproject.toml  readme.md  test_extract_invoices_deepseek.py
