[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "dmitriy.trochshenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "transformers (>=4.56.0,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
